--- a/Mixin/Mixin.entitlements
+++ b/Mixin/Mixin.entitlements
@@ -16,6 +16,10 @@
 	<array>
 		<string>CloudDocuments</string>
 	</array>
+	<key>com.apple.developer.in-app-payments</key>
+	<array>
+		<string>merchant.one.mixin.messenger.checkout.sandbox</string>
+	</array>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
 		<string>iCloud.$(CFBundleIdentifier)</string>
